--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -15,6 +15,9 @@
     <br />
     <a href="/accb_food.vn/cart">Cart</a>
     <br />
+    <form action="/accb_food.vn/profile">
+      <button>Profile</button>
+    </form>
     <br />
     <table border="1" width="100%">
       <tr>
