--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form
-      action="/accb_food.vn/upload_avatar"
+      action="/accb_food.vn/process_upload_file"
       method="POST"
       enctype="multipart/form-data"
     >
