finished upload file

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -13,9 +13,9 @@
       enctype="multipart/form-data"
     >
       Select your profile picture
-      <input type="file" name="profile_pic" id="" />
+      <input type="file" name="profile_pic" />
       <br />
-      <button>Save</button>
+      <input type="submit" value="Get me the stats!" class="btn btn-default" />
     </form>
   </body>
 </html>
