--- a/src/views/sign_in.ejs
+++ b/src/views/sign_in.ejs
@@ -91,6 +91,6 @@
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="/script/script.js"></script>
   </body>
 </html>
