--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,9 @@
     <a href="/sign_in">Đăng nhập</a>
     <br />
     <a href="#">Đăng ký</a>
+    <a href="/food/<%= dataFoods[0].MAN_MA %>">Press to test</a>
+    <br />
+
     <table border="1" width="100%">
       <tr>
         <th>Tên món ăn</th>
