--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,9 +10,7 @@
     <h1>This is HomePage</h1>
     <a href="/sign_in">Đăng nhập</a>
     <br />
-    <a href="#">Đăng ký</a>
-    <br />
-    <% if(dataFoods.lenght){ %>
+    <a href="/sign_up">Đăng ký</a>
     <a href="/food/<%= dataFoods[0].MAN_MA %>">Press to test</a>
     <br />
 
@@ -32,8 +30,5 @@
       </tr>
       <%}%>
     </table>
-    <% } else{ %>
-    <h1>Không có món ăn nào</h1>
-    <% } %>
   </body>
 </html>
