--- a/src/views/sign_in.ejs
+++ b/src/views/sign_in.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/sign_in.css" />
 
     <script
       src="https://kit.fontawesome.com/9382b228af.js"
@@ -16,16 +16,12 @@
   <body>
     <section class="container forms">
       <div class="top">
-        <img src="/images/sigup pic/logo.png" alt="" id="logo" />
+        <img src="/images/pic/logo.png" alt="" id="logo" />
       </div>
 
       <div class="mid">
         <div class="form">
-          <img
-            src="/images/sigin pic/sigin_thumpnail.png"
-            alt=""
-            id="thumpnail"
-          />
+          <img src="/images/pic/sigin_thumpnail.png" alt="" id="thumpnail" />
           <div class="form-content">
             <form action="/process_sign_in" method="POST">
               <div class="field input-field">
@@ -78,7 +74,7 @@
         </div>
 
         <div class="right">
-          <img src="/images/sigin pic/siginpic.png" alt="" id="signinpic" />
+          <img src="/images/pic/siginpic.png" alt="" id="signinpic" />
         </div>
       </div>
 
