--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,21 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <form
-      action="/accb_food.vn/process_upload_file"
-      method="POST"
-      enctype="multipart/form-data"
-    >
-      Select your profile picture
-      <input type="file" name="profile_pic" />
-      <br />
-      <input type="submit" value="Get me the stats!" class="btn btn-default" />
-    </form>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+ 
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="/css/resert.css">
+    <link rel="stylesheet" href="/css/info.css">
+    <title>Customner Report</title>
+</head>
+
+<body>
+    <section>
+        <nav class="Navbar">
+            <img id="logo" src="/images/pic/logo.png" alt="this is logo">
+            <ul class="Navbar-Directory">
+                <li class="Navbar-Directory-item">Home</li>
+                <li class="Navbar-Directory-item">Dishes</li>
+                <li class="Navbar-Directory-item">Review</li>
+                <li class="Navbar-Directory-item">About us</li>
+            </ul>
+
+            <div class="Navbar-Search">
+                <input class="Navbar-Search-input" type="search" placeholder="Search">
+                <button class="Navbar-Search-btn">
+                    <span>
+                        <i class="fa-solid fa-search"></i>
+                    </span>
+                </button>
+            </div>
+
+            <div class="Nav-Subnav">
+                <div class="Nav-Subnav-love">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="Nav-Subnav-cart">
+                    <i class="fa-sharp fa-solid fa-cart-plus"></i>
+                </div>
+                <div class="Nav-Subnav-account">
+                    <i class="fa-regular fa-user"></i>
+                </div>
+            </div>
+        </nav>
+    </section>
+
+    <div class="go_back">
+        <form action="/accb_food.vn">
+            <button type="submit">
+                <i class="fa-solid fa-arrow-left"></i>
+                Home
+            </button>
+        </form>
+    </div>
+
+    </div>
+    <section>
+        <div class="container">
+            <div class="left_container">
+                <div class="top_left_container">
+                    <span>My profile</span>
+                    <span>Manage profile information for account security</span>
+                </div>
+                <div class="bottom_left_container">
+                    <div class="name">
+                        <label for="">Your Name</label>
+                        <span>
+                            <%= dataUser[0].KH_TEN %>
+                        </span>
+                    </div>
+                    <div class="gende">
+                        <label for="">Gentle</label>
+                        <span><%= dataUser[0].KH_GIOITINH %></span>
+                    </div>
+                    <div class="ID">
+                        <label for="">ID</label>
+                        <span><%= dataUser[0].KH_SDT %></span>
+                    </div>
+                    <div class="address">
+                        <label for="">Your Address</label>
+                        <span><%= dataAddress[0].DC_SONHA %></span>
+                    </div>
+
+                    <button>Edit</button>
+                </div>
+            </div>
+            <div class="right_container">
+                <img src="/images/pic/pic-3.png" alt="This is avatar">
+                <span><%= dataUser[0].KH_TEN %></span>
+                <span><%= dataUser[0].KH_MAIL %></span>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <span>Copyright © 2022 ACCB Food Inc.</span>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/9382b228af.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
