finish incre and decre quantity in view cart

--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -26,7 +26,9 @@
       <nav class="Navbar">
         <img id="logo" src="/images/pic/logo.png" alt="this is logo" />
         <ul class="Navbar-Directory">
-          <li class="Navbar-Directory-item">Home</li>
+          <li class="Navbar-Directory-item">
+            <a href="/accb_food.vn" underline="none">Home</a>
+          </li>
           <li class="Navbar-Directory-item">Dishes</li>
           <li class="Navbar-Directory-item">Menu</li>
           <li class="Navbar-Directory-item">Review</li>
@@ -51,21 +53,27 @@
           <div class="Nav-Subnav-love">
             <i class="fa-regular fa-heart"></i>
           </div>
+          
           <div class="Nav-Subnav-cart">
             <i class="fa-sharp fa-solid fa-cart-plus"></i>
           </div>
+
           <div class="Nav-Subnav-account">
-            <i class="fa-regular fa-user"></i>
-          </div>
+            <a href="/accb_food.vn/profile">
+                <i class="fa-regular fa-user"></i>
+            </a>
+        </div>
         </div>
       </nav>
     </section>
 
     <div class="go_back">
-      <button type="submit">
-        <i class="fa-solid fa-arrow-left"></i>
-        Cart
-      </button>
+      <form action="/accb_food.vn">
+        <button type="submit">
+          <i class="fa-solid fa-arrow-left"></i>
+          BACK
+        </button>
+      </form>
     </div>
 
     <section>
@@ -107,15 +115,21 @@
                       </span>
                     </div>
                     <div class="btn_bottom">
-                      <button>
-                        <i class="fa-solid fa-minus"></i>
-                      </button>
+
+                      <form action="/accb_food.vn/cart/quantity/1/id/<%=dataFoods[i].MAN_MA %>" method="GET">
+                        <button>
+                          <i class="fa-solid fa-minus"></i>
+                        </button>
+                      </form>
+
                       <span class="quantity">
                         <%=dataFoodsinCart[i].SOLUONG%>
                       </span>
-                      <button>
-                        <i class="fa-solid fa-plus"></i>
-                      </button>
+                      <form action="/accb_food.vn/cart/quantity/0/id/<%=dataFoods[i].MAN_MA%>" method="GET">
+                        <button>
+                          <i class="fa-solid fa-plus"></i>
+                        </button>
+                      </form>
                     </div>
                   </div>
                 </div>
@@ -163,23 +177,27 @@
             <span>Totals cost:</span>
             <div class="stock_rate">
               <span>Total stock:</span>
+
               <div class="price">
                 <span>$</span>
-                <span>255,68</span>
+                <span>
+                  <%=totalCost %>
+                </span>
               </div>
+              
             </div>
             <div class="shipping_rate">
               <span>Shipping rates:</span>
               <div class="price">
                 <span>$</span>
-                <span>10,00</span>
+                <span>10000</span>
               </div>
             </div>
           </div>
           <div class="bottom_right_bottom_cart">
             <div class="total">
               <span>$</span>
-              <span>265,68</span>
+              <span><%=totalCost+10000 %></span>
             </div>
             <button>Order now!</button>
           </div>
